bk_ida/gccida/g0/output_long_unsigned_decimal
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_unsigned_decimal/src/diagnostic.c:915:37: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  output_long_unsigned_decimal( output_buffer_0 *buffer, unsigned __int64 i) 
                                    ^~~~~~~~~~~~~~~
                                    output_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_unsigned_decimal/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_unsigned_decimal/src/diagnostic.c:915:7: error: conflicting types for 'output_long_unsigned_decimal'
void  output_long_unsigned_decimal( output_buffer_0 *buffer, unsigned __int64 i) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_unsigned_decimal/src/diagnostic.c:77:13: note: previous declaration is here
static void output_long_unsigned_decimal PARAMS ((output_buffer *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_unsigned_decimal/src/diagnostic.c:917:32: error: use of undeclared identifier 'off_76BD2A'
sprintf( buffer->digit_buffer, off_76BD2A, i); 
                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_unsigned_decimal/src/obj/diagnostic.o] Error 1
